--- a/src/styles.css
+++ b/src/styles.css
@@ -27,6 +27,8 @@ body {
   display: grid;
   justify-content: center;
   align-items: center;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .container {
@@ -105,7 +107,8 @@ body {
 @media (min-width: 400px) {
   .container {
     display: grid;
-    grid-template-columns: repeat(4, auto);
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-areas: "a a b c" "d e e c";
     column-gap: 1.5rem;
   }
 
@@ -114,21 +117,18 @@ body {
   }
 
   .card--violate {
-    grid-column: 1 / 3;
+    grid-area: a;
   }
 
   .card--1-white {
-    grid-row: 1 / 3;
-    grid-column: 4;
+    grid-area: c;
   }
 
   .card--2-white {
-    grid-row: 2;
-    grid-column: 1;
+    grid-area: d;
   }
 
   .card--dark-blue {
-    grid-row: 2;
-    grid-column: 2 / 4;
+    grid-area: e;
   }
 }
