--- a/src/styles.css
+++ b/src/styles.css
@@ -132,6 +132,7 @@ body {
     grid-template-columns: repeat(4, 1fr);
     grid-template-areas: "a a b c" "d e e c";
     gap: 1.5rem;
+    width: 80%;
   }
 
   .card {
